Closed
Bug 311031
Opened 20 years ago
Closed 20 years ago
implement SVGTSpanElement.getComputedTextLength
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
People
(Reporter: longsonr, Unassigned)
References
Details
Attachments
(1 file)
|
2.42 KB,
patch
|
tor
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b5) Gecko/20050926 Firefox/1.4
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b5) Gecko/20050926 Firefox/1.4
similar to bug #264380 but for tspan rather than text elements.
Reproducible: Always
Steps to Reproduce:
1. goto http://telemetry.logica.co.uk
2. login by pressing OK.
3. click on sample reports, Craighead, reservoir 1 last week.
4. put mouse over one of the data points on the graph.
Actual Results:
not implemented exception in Javascript console
Expected Results:
Window should appear with information about the data point
| Reporter | ||
Comment 1•20 years ago
|
||
| Reporter | ||
Updated•20 years ago
|
Attachment #198428 -
Flags: review?(tor)
Attachment #198428 -
Flags: review?(tor) → review+
| Reporter | ||
Updated•20 years ago
|
Attachment #198428 -
Flags: superreview?(jst)
Comment 2•20 years ago
|
||
Comment on attachment 198428 [details] [diff] [review]
implement SVGTSpanElement.getComputedTextLength
sr=jst
Attachment #198428 -
Flags: superreview?(jst) → superreview+
Checked in for Robert.
Status: UNCONFIRMED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•