Bug 311031 - implement SVGTSpanElement.getComputedTextLength. Patch by longsonr@gmail.com, r=tor, sr=jst.